--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -145,7 +145,7 @@
 
 <body style="margin: 0 !important; padding: 0 !important; ">
     <div class="main-body">
-        <div class="banner">
+        <div style=" display: flex;flex-direction: row;align-items: center; gap: 10px;">
             <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public"
                 style="height:40px;width:30px;object-fit:contain;">
             <span style="font-weight: 900;font-size: 18px;">Ok Eat</span>
