--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -18,17 +18,17 @@
             -webkit-text-size-adjust: 100%;
             -ms-text-size-adjust: 100%;
         }
-
+        
         table,
         td {
             mso-table-lspace: 0pt;
             mso-table-rspace: 0pt;
         }
-
+        
         img {
             -ms-interpolation-mode: bicubic;
         }
-
+        
         img {
             border: 0;
             height: auto;
@@ -36,11 +36,11 @@
             outline: none;
             text-decoration: none;
         }
-
+        
         table {
             border-collapse: collapse !important;
         }
-
+        
         body {
             height: 100% !important;
             margin: 0 !important;
@@ -48,25 +48,26 @@
             width: 100% !important;
             color: #222;
         }
-
+        
         .main-body {
             width: 600px;
             margin: auto;
         }
-
+        
         .banner {
             display: flex;
             flex-direction: row;
             align-items: center;
             gap: 10px;
         }
-        .order-header{
+        
+        .order-header {
             padding: 10px 0;
             font-size: 20px;
             color: #222;
             font-weight: 900;
         }
-
+        
         .order-details {
             font-size: 16px;
             font-weight: 400;
@@ -74,54 +75,54 @@
             padding: 10px 0;
             border-bottom: 1px solid #f2f2f2;
         }
-
-        .supplier-section{
+        
+        .supplier-section {
             border-bottom: 1px solid #f2f2f2;
             padding: 20px 0;
-            display:flex;
+            display: flex;
             flex-direction: column;
         }
-
+        
         .items-row {
             margin-bottom: 10px;
         }
-
+        
         .items-table-header {
             border-bottom: 2px solid #eeeeee;
             padding: 10px;
             line-height: 30px;
         }
-
+        
         .item {
             line-height: 10px;
         }
-
+        
         .summary-item-row {
             line-height: 25px;
         }
-
+        
         .summary-item-value {
             text-align: right;
         }
-
+        
         .total-section {
             padding: 5px 10px;
             width: 100%;
         }
-
+        
         .delivery-date-section {
             padding: 5px 0;
         }
-
+        
         .greetings-section {
             margin-top: 5px;
         }
-
+        
         .footer-section {
             margin-top: 20px;
             font-size: small;
         }
-
+        
         a[x-apple-data-detectors] {
             color: inherit !important;
             text-decoration: none !important;
@@ -130,28 +131,26 @@
             font-weight: inherit !important;
             line-height: inherit !important;
         }
-
+        
         @media screen and (max-width: 480px) {
             .mobile-hide {
                 display: none !important;
             }
-
             .mobile-center {
                 text-align: center !important;
             }
         }
-
+        
         div[style*="margin: 16px 0;"] {
             margin: 0 !important;
         }
     </style>
 </head>
-<body style="margin: 0 !important; padding: 0 !important;" >
+
+<body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
         <div style=" display: flex;flex-direction: row;align-items: center; gap: 10px;">
-            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public"
-                style="height:40px;width:30px;object-fit:contain;">
-            <span style="font-weight: 900;font-size: 18px;">Ok Eat</span>
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:40px;width:30px;object-fit:contain;">
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
@@ -181,26 +180,19 @@
                         <tr width="100%" class="summary-item-row">
                             <td width="5%" align="left"><span th:utext="${item.quantity}"></span></td>
                             <td width="90%"><span th:utext="${item.name}"></span></td>
-                            <td width="5%" align="right"><span
-                                    style="width: 5%;padding: 0 10px;" th:remove="tag"
-                                    th:text="${#numbers.formatCurrency(item.price)}"></span></td>
+                            <td width="5%" align="right"><span style="width: 5%;padding: 0 10px;" th:remove="tag" th:text="${#numbers.formatCurrency(item.price)}"></span></td>
                         </tr>
                         <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">
-                            <td width="5%" align="left"><span style="padding: 0 10px;"
-                                                              th:utext="${item.choice.quantity}"></span></td>
+                            <td width="5%" align="left"><span style="padding: 0 10px;" th:utext="${item.choice.quantity}"></span></td>
                             <td width="90%"><span th:utext="${item.choice.name}"></span></td>
-                            <td width="5%" align="right"><span th:remove="tag"
-                                                               th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>
+                            <td width="5%" align="right"><span th:remove="tag" th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>
                         </tr>
-                        <tr width="100%" class="summary-item-row"
-                            th:if="${item.extras != null  && item.extras.size > 0}">
-                        <tr th:each="extra: ${item.extras}">
-                            <td width="5%" align="left"><span style="padding: 0 10px;"
-                                                              th:utext="${extra.quantity}"></span></td>
-                            <td width="90%"><span th:utext="${extra.name}"></span></td>
-                            <td width="5%" align="right"><span th:remove="tag"
-                                                               th:text="${#numbers.formatCurrency(extra.price)}"></span></td>
-                        </tr>
+                        <tr width="100%" class="summary-item-row" th:if="${item.extras != null  && item.extras.size > 0}">
+                            <tr th:each="extra: ${item.extras}">
+                                <td width="5%" align="left"><span style="padding: 0 10px;" th:utext="${extra.quantity}"></span></td>
+                                <td width="90%"><span th:utext="${extra.name}"></span></td>
+                                <td width="5%" align="right"><span th:remove="tag" th:text="${#numbers.formatCurrency(extra.price)}"></span></td>
+                            </tr>
                     </table>
                 </div>
             </div>
@@ -214,9 +206,7 @@
                         <tr width="100%" class="summary-item-row">
                             <td width="5%" align="left"><span th:utext="${partyItem.quantity}"></span></td>
                             <td width="90%"><span th:utext="${partyItem.name}"></span></td>
-                            <td width="5%" align="right"><span
-                                th:remove="tag"
-                                th:text="${#numbers.formatCurrency(partyItem.price)}"></span></td>
+                            <td width="5%" align="right"><span th:remove="tag" th:text="${#numbers.formatCurrency(partyItem.price)}"></span></td>
                         </tr>
                         <tr width="100%" th:each="candidate: ${partyItem.candidates}" style="border-bottom: 2px solid #e2e2e2;">
                             <td colspan="3">
@@ -229,34 +219,30 @@
                                     </tr>
                                 </table>
                             </td>
-                            
+
                         </tr>
                     </table>
                 </div>
             </div>
         </div>
-       
+
         <div style="border-bottom: 1px solid #e2e2e2;margin:3px 0;">
             <table cellspacing="0" cellpadding="0" border="0" width="100% ">
                 <tr width="100%" class="summary-item-row">
                     <td width="75% " align="left " class="summary-item-name">Sub Total</td>
-                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag"
-                            th:text="${#numbers.formatCurrency(order.subTotal)}"></span></td>
+                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag" th:text="${#numbers.formatCurrency(order.subTotal)}"></span></td>
                 </tr>
                 <tr width="100%" class="summary-item-row">
                     <td width="75% " align="left " class="summary-item-name">Bag Fee</td>
-                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag"
-                            th:text="${#numbers.formatCurrency(order.packingFee)}"></span></td>
+                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag" th:text="${#numbers.formatCurrency(order.packingFee)}"></span></td>
                 </tr>
                 <tr width="100%" class="summary-item-row" th:if="${order.serviceMode == 'DELIVERY'}">
                     <td width="75% " align="left " class="summary-item-name">Delivery Fee</td>
-                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag"
-                            th:text="${#numbers.formatCurrency(order.deliveryFee)}"></span></td>
+                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag" th:text="${#numbers.formatCurrency(order.deliveryFee)}"></span></td>
                 </tr>
                 <tr width="100%" class="summary-item-row">
                     <td width="75% " align="left " class="summary-item-name">Sale Tax</td>
-                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag"
-                            th:text="${#numbers.formatCurrency(order.serviceFee)}"></span></td>
+                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag" th:text="${#numbers.formatCurrency(order.serviceFee)}"></span></td>
                 </tr>
             </table>
         </div>
@@ -265,72 +251,71 @@
             <table cellspacing="0 " cellpadding="0 " border="0 " width="100% ">
                 <tr width="100%" class="summary-item-row">
                     <td width="75% " align="left " class="summary-item-name" style="font-weight: bold;">TOTAL</td>
-                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag"
-                            th:text="${#numbers.formatCurrency(order.total)}"></span></td>
+                    <td width="25% " align="right " class="summary-item-value"> <span th:remove="tag" th:text="${#numbers.formatCurrency(order.total)}"></span></td>
                 </tr>
             </table>
         </div>
         <div style="background: #f9f9f9;padding:5px 10px;margin:10px 0;border-radius:5px" th:if="${serviceMode == 'DELIVERY'}">
             <p style="font-weight: 800; ">Delivery Address</p>
             <p>
-            <div th:if="${customer.address.addressLine1} != null">
-                <span th:utext="${customer.address.addressLine1}"></span><br>
-            </div>
-            <div th:if="${customer.address.addressLine2} != null">
-                <span th:utext="${customer.address.addressLine2}"></span><br>
-            </div>
-            <div th:if="${customer.address.city} != null">
-                <span th:utext="${customer.address.city}"></span><br>
-            </div>
-            <div th:if="${customer.address.country} != null">
-                <span th:utext="${customer.address.country}"></span><br>
-            </div>
-            <div th:if="${customer.address.postcode} != null">
-                <span th:utext="${customer.address.postcode}"></span><br>
-            </div>
+                <div th:if="${customer.address.addressLine1} != null">
+                    <span th:utext="${customer.address.addressLine1}"></span><br>
+                </div>
+                <div th:if="${customer.address.addressLine2} != null">
+                    <span th:utext="${customer.address.addressLine2}"></span><br>
+                </div>
+                <div th:if="${customer.address.city} != null">
+                    <span th:utext="${customer.address.city}"></span><br>
+                </div>
+                <div th:if="${customer.address.country} != null">
+                    <span th:utext="${customer.address.country}"></span><br>
+                </div>
+                <div th:if="${customer.address.postcode} != null">
+                    <span th:utext="${customer.address.postcode}"></span><br>
+                </div>
             </p>
             <hr>
         </div>
         <div th:if="${serviceMode == 'DELIVERY'}">
             <div th:if="${order.scheduledDate}" style="background: #dbf3fa;padding:10px;margin:5px 0;border-radius:14px;display: flex;gap: 10px;">
-                <span style="font-weight: 800;margin-right: 10px; display: block;" >Delivery Date </span>
+                <span style="font-weight: 800;margin-right: 10px; display: block;">Delivery Date </span>
                 <span th:utext="${#temporals.format(order.scheduledDate, 'dd MMM yyyy h:mm a')}"></span>
             </div>
         </div>
         <div th:if="${serviceMode == 'COLLECTION'}">
             <div th:if="${order.scheduledDate}" style="background: #dbf3fa;padding:10px;margin:5px 0;border-radius:14px;display: flex;gap: 10px;">
-                <span style="font-weight: 800;margin-right: 10px; display: block;" >Collection Date </span>
+                <span style="font-weight: 800;margin-right: 10px; display: block;">Collection Date </span>
                 <span th:utext="${#temporals.format(order.scheduledDate, 'dd MMM yyyy h:mm a')}"></span>
             </div>
         </div>
         <div style="background: #f9f9f9;padding:5px 10px;margin:10px 0;border-radius:6px" th:if="${serviceMode == 'COLLECTION'}">
             <p style="font-weight: 800; ">Collect At</p>
             <p>
-            <div th:if="${cloudKitchen.address.addressLine1} != null">
-                <span th:utext="${cloudKitchen.address.addressLine1}"></span><br>
-            </div>
-            <div th:if="${cloudKitchen.address.addressLine2} != null">
-                <span th:utext="${cloudKitchen.address.addressLine2}"></span><br>
-            </div>
-            <div th:if="${cloudKitchen.address.city} != null">
-                <span th:utext="${cloudKitchen.address.city}"></span><br>
-            </div>
-            <div th:if="${cloudKitchen.address.country} != null">
-                <span th:utext="${cloudKitchen.address.country}"></span><br>
-            </div>
-            <div th:if="${cloudKitchen.address.postcode} != null">
-                <span th:utext="${cloudKitchen.address.postcode}"></span><br>
-            </div>
+                <div th:if="${cloudKitchen.address.addressLine1} != null">
+                    <span th:utext="${cloudKitchen.address.addressLine1}"></span><br>
+                </div>
+                <div th:if="${cloudKitchen.address.addressLine2} != null">
+                    <span th:utext="${cloudKitchen.address.addressLine2}"></span><br>
+                </div>
+                <div th:if="${cloudKitchen.address.city} != null">
+                    <span th:utext="${cloudKitchen.address.city}"></span><br>
+                </div>
+                <div th:if="${cloudKitchen.address.country} != null">
+                    <span th:utext="${cloudKitchen.address.country}"></span><br>
+                </div>
+                <div th:if="${cloudKitchen.address.postcode} != null">
+                    <span th:utext="${cloudKitchen.address.postcode}"></span><br>
+                </div>
             </p>
         </div>
-        <div style="margin: 10px 0;"  th:if="${linkUrl} != null">
+        <div style="margin: 10px 0;" th:if="${linkUrl} != null">
             <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                 <tr>
                     <td align="center">
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                             <tr>
                                 <td align="center">
-<!--                                    <a th:href="@{http://localhost:4200/make_payment?intent={qs}(qs = ${paymentIntentId})}" class="f-fallback button button&#45;&#45;green" target="_blank">Make Payment</a>-->
+                                    <!--                                    <a th:href="@{http://localhost:4200/make_payment?intent={qs}(qs = ${paymentIntentId})}" class="f-fallback button button&#45;&#45;green" target="_blank">Make Payment</a>-->
                                     <a th:href="${linkUrl}" class="f-fallback button button--green" target="_blank">${linkText}</a>
                                 </td>
                             </tr>
