--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -150,8 +150,8 @@
 
 <body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
-        <div style=" display: flex;flex-direction: row;align-items: center; gap: 10px;">
-            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:40px;width:30px;object-fit:contain;">
+        <div style=" height: 100px;width: 120px;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:100%;width:100%;object-fit:contain;">
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
