--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -47,6 +47,7 @@
             padding: 0 !important;
             width: 100% !important;
             color: #222;
+            background-color: #fff;
         }
         
         .main-body {
@@ -151,7 +152,7 @@
 <body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
         <div style=" height: 150px;width: 170px;background-color: #FFF;">
-            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:100%;width:100%;object-fit:contain;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/c0d176ef-ed11-4a6b-1d4d-492508fcae00/public" style="height:100%;width:100%;object-fit:contain;">
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
