--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -54,6 +54,7 @@
             width: 600px;
             margin: auto;
             background-color: #fff;
+            color: #222;
         }
         
         .banner {
@@ -152,7 +153,7 @@
 <body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
         <div style=" height: 150px;width: 170px;background-color: #FFF;">
-            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/c0d176ef-ed11-4a6b-1d4d-492508fcae00/public" style="height:100%;width:100%;object-fit:contain;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/febb7765-3908-41dc-f9e9-db05a6493b00/public" style="height:100%;width:100%;object-fit:contain;">
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
